compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__function_call_incorrect_arity_with_labels_fault_tolerance2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 382
expression: "\nfn wibble(wibble arg1: fn() -> Int, wobble arg2: Int, wabble arg3: Int) -> Int {\n  arg1() + arg2 + arg3\n}\n\npub fn main() {\n  wibble(fn() {\"\"}, wobble: \"\")\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn wibble(wibble arg1: fn() -> Int, wobble arg2: Int, wabble arg3: Int) -> Int {
  arg1() + arg2 + arg3
}

pub fn main() {
  wibble(fn() {""}, wobble: "")
}


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:7:3
  │
7 │   wibble(fn() {""}, wobble: "")
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected 3 arguments, got 2

This call accepts these additional labelled arguments:

  - wabble

error: Type mismatch
  ┌─ /src/one/two.gleam:7:10
  │
7 │   wibble(fn() {""}, wobble: "")
  │          ^^^^^^^^^

Expected type:

    fn() -> Int

Found type:

    fn() -> String
